2014-02-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c: Applied patch by Troy Patteson to fix
	SourceForge issue #260 "Rotation exhibits clipping/shearing errors
	for short wide images at some angles".

2014-02-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Fix documentation to note that 'unspecified
	alpha' is the GraphicsMagick default when writing TIFF rather than
	'associated alpha'.  Much thanks to Mats Peterson for alerting us
	of this error.

2014-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (InterpolatePrimary): Added a hack so that
	affine transformations and displace composite do not have
	background colored fringing on the transferred image edges when
	the background is completely transparent.  Fringing problem was
	caused by one or more of the line ends being a transparent pixel
	outside of the bounds of the original image content.  May not be
	the final solution.

2014-02-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/semaphore.c (AcquireSemaphoreInfo): Document that this
	function was deprecated.
	(LiberateSemaphoreInfo): Document that this function was
	deprecated.

2014-02-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/psd.c (RegisterPSDImage): Set PSD to UnstableCoderClass
	since its implementation is currently rather marginal.  It may
	even be that this coder deserves to be marked with the new
	BrokenCoderClass.  We are still looking for a volunteer to iron
	out the wrinkles in the PSD reader.

	* magick/magick.h (CoderClass): Added BrokenCoderClass to mark
	coders which often malfunction or are not very useful in their
	current condition.  Sometimes there is still hope that problems
	will be resolved and so the source file is not outright deleted.
	This setting allows us to mark and use coders which might
	malfunction by defining MAGICK_CODER_STABILITY=BROKEN in the
	environment while not causing danger for normal use.
