@@ -38,6 +38,12 @@
 <p>2014-02-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/shear.c: Applied patch by Troy Patteson to improve
+non-integral rotation by around 40% by minimizing added image
+borders.  This may cause small differences in results for some
+images.</li>
+<li>reference/filter/Rotate10.miff: Update rotate 10 degrees
+reference image so that PerlMagick test passes.</li>
 <li>magick/shear.c: Applied patch by Troy Patteson to fix
 SourceForge issue #260 &quot;Rotation exhibits clipping/shearing errors
 for short wide images at some angles&quot;.</li>
